# raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: bounding_box.h  bvh_node.h  camera.h  color.h  constant.h  hittable.h  hittable_list.h  interval.h  material.h  point3.h  ray.h  sphere.h  util.h  vect3.h  version.h.in
src/: main.cc
